m-44 v-7: Discuss statefull Website

--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -49,6 +49,13 @@
             <li>Send data to html elements using props</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Website state, state management, purpose of state
+        </h2>
+        <ul>
+            <li>Discuss statefull Website</li>
+        </ul>
+    </div>
 
 </body>
 </html>
