m-44 v-8: Discuss React App

--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -56,6 +56,13 @@
             <li>Discuss statefull Website</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Install React App and explore folder structure and edit
+        </h2>
+        <ul>
+            <li>Discuss React App</li>
+        </ul>
+    </div>
 
 </body>
 </html>
