--- a/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
+++ b/Milestone_8 - Simple React/Module _44 - Core concepts/01_About Module 44.html
@@ -63,6 +63,13 @@
             <li>Discuss React App</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary and concept recap
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
