--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -14,6 +14,13 @@
             <li>Module Introduction</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Jsx, Dynamic Content, Dynamic Style In React
+        </h2>
+        <ul>
+            <li>Set Dynamic Content</li>
+        </ul>
+    </div>
 
 </body>
 </html>
