--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -21,6 +21,13 @@
             <li>Set Dynamic Content</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Create Component, Return Html From A Component
+        </h2>
+        <ul>
+            <li>Create Component</li>
+        </ul>
+    </div>
 
 </body>
 </html>
