--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -28,6 +28,13 @@
             <li>Create Component</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Pass Dynamic Data To Components, Props In React
+        </h2>
+        <ul>
+            <li>Pass Dynamic Data To Components</li>
+        </ul>
+    </div>
 
 </body>
 </html>
