m-45 v-5: Create Multiple Components

--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -35,6 +35,13 @@
             <li>Pass Dynamic Data To Components</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(Advanced) Create Multiple Components From An Array Of Objects
+        </h2>
+        <ul>
+            <li>Create Multiple Components</li>
+        </ul>
+    </div>
 
 </body>
 </html>
