--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -42,6 +42,13 @@
             <li>Create Multiple Components</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Concept Recap, Jsx, Components, Props, Display Array Of Objects
+        </h2>
+        <ul>
+            <li>Concept Recap</li>
+        </ul>
+    </div>
 
 </body>
 </html>
