--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -49,6 +49,13 @@
             <li>Concept Recap</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(Advanced) State, Component State Hook And Set State Method
+        </h2>
+        <ul>
+            <li>Component State Hook</li>
+        </ul>
+    </div>
 
 </body>
 </html>
