m-45 v-8: Load Dynamic Data

--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -56,6 +56,13 @@
             <li>Component State Hook</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(Advanced) Load Dynamic Data, Api Call Useeffect Integrate State
+        </h2>
+        <ul>
+            <li>Load Dynamic Data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
