--- a/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
+++ b/Milestone_8 - Simple React/Module_45 - JSX, props, stats/01_About Module 45.html
@@ -63,6 +63,13 @@
             <li>Load Dynamic Data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary React Core Concepts Recap
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
