--- a/Milestone_8 - Simple React/Module_45.5 - Practices day/01_About Module 45.5.html
+++ b/Milestone_8 - Simple React/Module_45.5 - Practices day/01_About Module 45.5.html
@@ -14,6 +14,13 @@
             <li>Recap react core concept</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Check out Event listener, useState inside components
+        </h2>
+        <ul>
+            <li>Check out Event listener</li>
+        </ul>
+    </div>
 
 </body>
 </html>
