--- a/Milestone_8 - Simple React/Module_45.5 - Practices day/01_About Module 45.5.html
+++ b/Milestone_8 - Simple React/Module_45.5 - Practices day/01_About Module 45.5.html
@@ -21,6 +21,13 @@
             <li>Check out Event listener</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Load data using the useEffect and display data
+        </h2>
+        <ul>
+            <li>Load data using the useEffect</li>
+        </ul>
+    </div>
 
 </body>
 </html>
