--- a/Milestone_8 - Simple React/Module_45.5 - Practices day/01_About Module 45.5.html
+++ b/Milestone_8 - Simple React/Module_45.5 - Practices day/01_About Module 45.5.html
@@ -28,6 +28,13 @@
             <li>Load data using the useEffect</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Avoid multiple react install due to slow internet
+        </h2>
+        <ul>
+            <li>Avoid multiple react install</li>
+        </ul>
+    </div>
 
 </body>
 </html>
