--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -14,6 +14,13 @@
             <li>Load countries using useEffect</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Display countries in a simple way, Folder Structure
+        </h2>
+        <ul>
+            <li>Display countries</li>
+        </ul>
+    </div>
 
 </body>
 </html>
