--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -21,6 +21,13 @@
             <li>Display countries</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.React Extension Pack and component with css file
+        </h2>
+        <ul>
+            <li>Folder Structure</li>
+        </ul>
+    </div>
 
 </body>
 </html>
