m-46 v-4: Folder Structure and connect them

--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -28,6 +28,13 @@
             <li>Folder Structure</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Components inside the folder structure and connect them
+        </h2>
+        <ul>
+            <li>Folder Structure and connect them</li>
+        </ul>
+    </div>
 
 </body>
 </html>
