m-46 v-5: Create component and pass data

--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -35,6 +35,13 @@
             <li>Folder Structure and connect them</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Create child component and pass data via props
+        </h2>
+        <ul>
+            <li>Create component and pass data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
