--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -42,6 +42,13 @@
             <li>Create component and pass data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(advanced) Pass multiple data to a child component
+        </h2>
+        <ul>
+            <li>Pass multiple data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
