--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -49,6 +49,13 @@
             <li>Pass multiple data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) add unique key for mapping components
+        </h2>
+        <ul>
+            <li>Add style</li>
+        </ul>
+    </div>
 
 </body>
 </html>
