m-46 v-8: Build your react app

--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -56,6 +56,13 @@
             <li>Add style</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.build your react app and host your react app in Netlify
+        </h2>
+        <ul>
+            <li>Build your react app</li>
+        </ul>
+    </div>
 
 </body>
 </html>
