m-46 v-9: Module Summary and use bootstrap

--- a/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
+++ b/Milestone_8 - Simple React/Module_46 - Simple react rest countries/01_About Module 46.html
@@ -63,6 +63,13 @@
             <li>Build your react app</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary and recap
+        </h2>
+        <ul>
+            <li>Module Summary and use bootstrap</li>
+        </ul>
+    </div>
 
 </body>
 </html>
