--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -14,6 +14,13 @@
             <li>Module Introduction Create React App</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.What is JSX, React Component, babel transpiler
+        </h2>
+        <ul>
+            <li>Discuss about JSX</li>
+        </ul>
+    </div>
 
 </body>
 </html>
