m47 v3: Unidirectional data flow

--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -21,6 +21,13 @@
             <li>Discuss about JSX</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Components and how props works, unidirectional data flow
+        </h2>
+        <ul>
+            <li>Unidirectional data flow</li>
+        </ul>
+    </div>
 
 </body>
 </html>
