--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -28,6 +28,13 @@
             <li>Unidirectional data flow</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.(advanced) How states works, asynchronous, console state
+        </h2>
+        <ul>
+            <li>How states works</li>
+        </ul>
+    </div>
 
 </body>
 </html>
