m47 v5: Props vs State

--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -35,6 +35,20 @@
             <li>How states works</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.(advanced) How states works, asynchronous, console state
+        </h2>
+        <ul>
+            <li>How states works</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>5.How React Hook works, send state via props, props vs state
+        </h2>
+        <ul>
+            <li>Props vs State</li>
+        </ul>
+    </div>
 
 </body>
 </html>
