--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -49,6 +49,13 @@
             <li>Props vs State</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.What is React, when to use it, react vs angular vs vue
+        </h2>
+        <ul>
+            <li>React uses</li>
+        </ul>
+    </div>
 
 </body>
 </html>
