m47 v7: irtual dom, diff algorithm

--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -56,6 +56,13 @@
             <li>React uses</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.How react works, Render, virtual dom, diff algorithm, fiber
+        </h2>
+        <ul>
+            <li>Virtual dom, diff algorithm</li>
+        </ul>
+    </div>
 
 </body>
 </html>
