m47 v8: React component lifecycle

--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -63,6 +63,13 @@
             <li>Virtual dom, diff algorithm </li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.React component lifecycle and rerender
+        </h2>
+        <ul>
+            <li>React component lifecycle</li>
+        </ul>
+    </div>
 
 </body>
 </html>
