--- a/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
+++ b/Milestone_8 - Simple React/Module_47 - How react works/01_About Module 47.html
@@ -70,6 +70,13 @@
             <li>React component lifecycle</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary, recap, Properties vs attributes
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
