--- a/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
+++ b/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
@@ -14,6 +14,13 @@
             <li>React import and exprot</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create and Load Fake data, intro to array reduce
+        </h2>
+        <ul>
+            <li>Create and Load Fake data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
