--- a/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
+++ b/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
@@ -21,6 +21,13 @@
             <li>Create and Load Fake data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Intro to Local storage to store data
+        </h2>
+        <ul>
+            <li>Local storage to store data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
