m47.5 v4: Add and remove data

--- a/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
+++ b/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
@@ -28,6 +28,13 @@
             <li>Local storage to store data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Add and remove data to the local storage
+        </h2>
+        <ul>
+            <li>Add and remove data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
