m47.5 v5: Good UI vs bad UI

--- a/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
+++ b/Milestone_8 - Simple React/Module_47.5 - Practice and react side things/01_About Module 47.5.html
@@ -35,6 +35,13 @@
             <li>Add and remove data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Good UI vs bad UI, themeforest, freepik, flaticon, unsplash
+        </h2>
+        <ul>
+            <li>Good UI vs bad UI</li>
+        </ul>
+    </div>
 
 </body>
 </html>
