--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -14,6 +14,13 @@
             <li>Site overview and update logo</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Header Component, logo position, set nav menu
+        </h2>
+        <ul>
+            <li>Header Component</li>
+        </ul>
+    </div>
 
 </body>
 </html>
