m48 v3: Load data and set state

--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -21,6 +21,13 @@
             <li>Header Component</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Shop Component Layout, load data and set state
+        </h2>
+        <ul>
+            <li>Load data and set state</li>
+        </ul>
+    </div>
 
 </body>
 </html>
