--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -28,6 +28,13 @@
             <li>Load data and set state</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Product Component, component layout, display data
+        </h2>
+        <ul>
+            <li>Product Component</li>
+        </ul>
+    </div>
 
 </body>
 </html>
