--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -35,6 +35,13 @@
             <li>Product Component</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Review Progress so far, add a button for event handler
+        </h2>
+        <ul>
+            <li>Add a button</li>
+        </ul>
+    </div>
 
 </body>
 </html>
