--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -42,6 +42,13 @@
             <li>Add a button</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(advanced) set eventhandler, pass eventhandler to child
+        </h2>
+        <ul>
+            <li>Set eventhandler</li>
+        </ul>
+    </div>
 
 </body>
 </html>
