m48 v7: Cart state setup

--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -49,6 +49,13 @@
             <li>Set eventhandler</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.(advanced) Cart state setup, update cart and total on click
+        </h2>
+        <ul>
+            <li>Cart state setup</li>
+        </ul>
+    </div>
 
 </body>
 </html>
