m48 v8: Install external packages

--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -56,6 +56,13 @@
             <li>Cart state setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Install external packages, react-fontawesome, display icon
+        </h2>
+        <ul>
+            <li>Install external packages</li>
+        </ul>
+    </div>
 
 </body>
 </html>
