--- a/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
+++ b/Milestone_8 - Simple React/Module_48 - Simple react SPA/01_About Module 48.html
@@ -63,6 +63,13 @@
             <li>Install external packages</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Simple React SPA module summary
+        </h2>
+        <ul>
+            <li>Module summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
