--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -14,6 +14,13 @@
             <li>Module recap</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Setting the cart on the localStorage for retrieve
+        </h2>
+        <ul>
+            <li>Set data to localStorage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
