--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -21,6 +21,13 @@
             <li>Set data to localStorage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.(advanced) Load cart from local storage, find product
+        </h2>
+        <ul>
+            <li>Load cart from local storage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
