--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -28,6 +28,13 @@
             <li>Load cart from local storage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.(advanced) Display local storage cart to the UI
+        </h2>
+        <ul>
+            <li>Display local storage cart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
