m49 v5: Handle quantity from storage to cart

--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -35,6 +35,13 @@
             <li>Display local storage cart</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.(super advanced) Handle quantity from storage to cart
+        </h2>
+        <ul>
+            <li>Handle quantity from storage to cart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
