m49 v6: mplement search to find products

--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -42,6 +42,13 @@
             <li>Handle quantity from storage to cart</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.(advanced) implement search to find products
+        </h2>
+        <ul>
+            <li>Implement search to find products</li>
+        </ul>
+    </div>
 
 </body>
 </html>
