m49 v7: Display dynamic ratings

--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -49,6 +49,13 @@
             <li>Implement search to find products </li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Display dynamic star ratings on products
+        </h2>
+        <ul>
+            <li>Display dynamic ratings</li>
+        </ul>
+    </div>
 
 </body>
 </html>
