--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -56,6 +56,20 @@
             <li>Display dynamic ratings</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Display dynamic star ratings on products
+        </h2>
+        <ul>
+            <li>Display dynamic ratings</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>8.Module summary, deploy, code recap
+        </h2>
+        <ul>
+            <li>Module summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
