m49 v9: Discuss how to learn react

--- a/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
+++ b/Milestone_8 - Simple React/Module_49 - Searchable E-commerce/01_About Module 49.html
@@ -70,6 +70,13 @@
             <li>Module summary</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.How to Master React
+        </h2>
+        <ul>
+            <li>Discuss how to learn react</li>
+        </ul>
+    </div>
 
 </body>
 </html>
