m50.5 v2: Stored in local storage

--- a/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
+++ b/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
@@ -14,6 +14,13 @@
             <li>Add or remove key to an object</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Read, Write and update data stored in local storage
+        </h2>
+        <ul>
+            <li>Stored in local storage</li>
+        </ul>
+    </div>
 
 </body>
 </html>
