--- a/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
+++ b/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
@@ -21,6 +21,13 @@
             <li>Stored in local storage</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Wrap event handler with arrow function while passing data
+        </h2>
+        <ul>
+            <li>Event handler</li>
+        </ul>
+    </div>
 
 </body>
 </html>
