--- a/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
+++ b/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
@@ -28,6 +28,13 @@
             <li>Event handler</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Get and set data from Local Storage with React Application
+        </h2>
+        <ul>
+            <li>Get and set data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
