m50.5 v5: Array reduce and handle quantity

--- a/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
+++ b/Milestone_8 - Simple React/Module_50.5 - Bonus/01_About Module 50.5.html
@@ -35,6 +35,13 @@
             <li>Get and set data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Revisit array reduce and handle quantity property
+        </h2>
+        <ul>
+            <li>Array reduce and handle quantity</li>
+        </ul>
+    </div>
 
 </body>
 </html>
