--- a/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
+++ b/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
@@ -14,6 +14,13 @@
             <li>Use Bootstrap CDN</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Install React Bootstrap in your react application
+        </h2>
+        <ul>
+            <li>Install Bootstrap and use</li>
+        </ul>
+    </div>
 
 </body>
 </html>
