m51 v4: Display News and add Spinner

--- a/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
+++ b/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
@@ -21,6 +21,20 @@
             <li>Install Bootstrap and use</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Explore News API to integrate react bootstrap Card
+        </h2>
+        <ul>
+            <li>Explore News API</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>4.Display News and add Loading Spinner on your app
+        </h2>
+        <ul>
+            <li>Display News and add Spinner</li>
+        </ul>
+    </div>
 
 </body>
 </html>
