--- a/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
+++ b/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
@@ -42,6 +42,13 @@
             <li>Getting started with Material UI</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Display News using Material UI Card
+        </h2>
+        <ul>
+            <li>Display News</li>
+        </ul>
+    </div>
 
 </body>
 </html>
