--- a/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
+++ b/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
@@ -49,6 +49,13 @@
             <li>Display News</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Setup tailwind css with Create React App
+        </h2>
+        <ul>
+            <li>Setup tailwind css</li>
+        </ul>
+    </div>
 
 </body>
 </html>
