--- a/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
+++ b/Milestone_9 - React Router/Module_51 - React bootstrap,matarial UI/01_About Module 51.html
@@ -56,6 +56,13 @@
             <li>Setup tailwind css</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Use reachart to draw any type of chart using React
+        </h2>
+        <ul>
+            <li>Use reachart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
