--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -14,6 +14,13 @@
             <li>Install React Router, Project Setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create Simple Route and simple router setup
+        </h2>
+        <ul>
+            <li>Simple router setup</li>
+        </ul>
+    </div>
 
 </body>
 </html>
