--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -21,6 +21,13 @@
             <li>Simple router setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Load Users, display users, style users
+        </h2>
+        <ul>
+            <li>Load and display users</li>
+        </ul>
+    </div>
 
 </body>
 </html>
