--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -35,6 +35,20 @@
             <li>Recap Router</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Recap Router, route, path, component, not found, exact
+        </h2>
+        <ul>
+            <li>Recap Router</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>5.Navigate Pages, set header, Create Link, display active route
+        </h2>
+        <ul>
+            <li>Navigate Pages</li>
+        </ul>
+    </div>
 
 </body>
 </html>
