--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -49,6 +49,13 @@
             <li>Navigate Pages</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Create route with some fixed and some dynamic part
+        </h2>
+        <ul>
+            <li>Create route with dynamic part</li>
+        </ul>
+    </div>
 
 </body>
 </html>
