m52 v7: React route parameter

--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -56,6 +56,13 @@
             <li>Create route with dynamic part</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.React route parameter and load data based on dynamic route
+        </h2>
+        <ul>
+            <li>React route parameter</li>
+        </ul>
+    </div>
 
 </body>
 </html>
