m52 v8: Navigate fixed or dynamic route

--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -63,6 +63,13 @@
             <li>React route parameter</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.How to navigate fixed or dynamic route using a button click
+        </h2>
+        <ul>
+            <li>Navigate fixed or dynamic route</li>
+        </ul>
+    </div>
 
 </body>
 </html>
