--- a/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
+++ b/Milestone_9 - React Router/Module_52 - Raact Router/01_About Module 52.html
@@ -70,6 +70,13 @@
             <li>Navigate fixed or dynamic route</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary and Recap React Route for Posts
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
