--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -14,6 +14,13 @@
             <li>Module overview with personal git setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Install React router and implement simple router setup
+        </h2>
+        <ul>
+            <li>Simple router setup</li>
+        </ul>
+    </div>
 
 </body>
 </html>
