m52 v3: Set hooks and import

--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -21,6 +21,13 @@
             <li>Simple router setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Write useState and useEffect in a different file and import it
+        </h2>
+        <ul>
+            <li>Set hooks and import</li>
+        </ul>
+    </div>
 
 </body>
 </html>
