m53 v5: Display Shopping cart

--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -35,6 +35,13 @@
             <li>Create useCart and use it</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Create review page structure and Display Shopping cart
+        </h2>
+        <ul>
+            <li>Display Shopping cart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
