--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -42,6 +42,13 @@
             <li>Display Shopping cart</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Implement Review Item and apply Remove Item handler
+        </h2>
+        <ul>
+            <li>Remove Item handler</li>
+        </ul>
+    </div>
 
 </body>
 </html>
