--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -49,6 +49,13 @@
             <li>Remove Item handler</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Make Data consistent across UI and stored data
+        </h2>
+        <ul>
+            <li>Across UI and stored data</li>
+        </ul>
+    </div>
 
 </body>
 </html>
