m53 v8: Remove using filter

--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -56,6 +56,20 @@
             <li>Across UI and stored data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Make Data consistent across UI and stored data
+        </h2>
+        <ul>
+            <li>Across UI and stored data</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>8.(conceptual) useState, useEffect, and remove using filter
+        </h2>
+        <ul>
+            <li>Remove using filter</li>
+        </ul>
+    </div>
 
 </body>
 </html>
