--- a/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
+++ b/Milestone_9 - React Router/Module_53 - Ema_jhon Router/01_About Module 53.html
@@ -70,6 +70,13 @@
             <li>Remove using filter</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary, use NavLink and recap custom hook
+        </h2>
+        <ul>
+            <li>Remove using filter</li>
+        </ul>
+    </div>
 
 </body>
 </html>
