m54 v2: Order placed and clear cart

--- a/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
+++ b/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
@@ -14,6 +14,13 @@
             <li>Use Children props</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create order placed and clear cart and stored data
+        </h2>
+        <ul>
+            <li>Order placed and clear cart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
