m54 v3: Update quantity of existing item

--- a/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
+++ b/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
@@ -21,6 +21,13 @@
             <li>Order placed and clear cart</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Debug add to cart bug and update quantity of existing item
+        </h2>
+        <ul>
+            <li>Update quantity of existing item</li>
+        </ul>
+    </div>
 
 </body>
 </html>
