--- a/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
+++ b/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
@@ -28,6 +28,13 @@
             <li>Update quantity of existing item</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Deploy react router and introduction to react dev tool
+        </h2>
+        <ul>
+            <li>Introduction to react dev tool</li>
+        </ul>
+    </div>
 
 </body>
 </html>
