m54 v5: Explore React Conditional

--- a/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
+++ b/Milestone_9 - React Router/Module_54 - Simple context API/01_About Module 54.html
@@ -35,6 +35,13 @@
             <li>Introduction to react dev tool</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Explore Conditional Rendering in React
+        </h2>
+        <ul>
+            <li>Explore React Conditional</li>
+        </ul>
+    </div>
 
 </body>
 </html>
