--- a/Milestone_9 - React Router/Module_54.5 - Practices Day/01_About Module 54.5.html
+++ b/Milestone_9 - React Router/Module_54.5 - Practices Day/01_About Module 54.5.html
@@ -14,6 +14,13 @@
             <li>Prace React Router</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.How to display multiple components in one route
+        </h2>
+        <ul>
+            <li>Display multiple components</li>
+        </ul>
+    </div>
 
 </body>
 </html>
