m55.5 v3: Remove Item From Stored Cart

--- a/Milestone_9 - React Router/Module_56 - React router Bonus/01_About Module 55.5.html
+++ b/Milestone_9 - React Router/Module_56 - React router Bonus/01_About Module 55.5.html
@@ -21,6 +21,13 @@
             <li>Add To Cart To Persists Data</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Implement Remove Item From Stored Cart
+        </h2>
+        <ul>
+            <li>Remove Item From Stored Cart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
