--- a/Milestone_9 - React Router/Module_56 - React router Bonus/01_About Module 55.5.html
+++ b/Milestone_9 - React Router/Module_56 - React router Bonus/01_About Module 55.5.html
@@ -28,6 +28,13 @@
             <li>Remove Item From Stored Cart</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Clear The Cart And Overview Of The Data Storage
+        </h2>
+        <ul>
+            <li>Clear The Cart</li>
+        </ul>
+    </div>
 
 </body>
 </html>
