--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -14,6 +14,13 @@
             <li>Discuss authentication vs Authorization</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create firebase project, Google Analytics Overview
+        </h2>
+        <ul>
+            <li>Create firebase project</li>
+        </ul>
+    </div>
 
 </body>
 </html>
