--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -21,6 +21,13 @@
             <li>Create firebase project</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Install Firebase SDK and set Firebase configuration
+        </h2>
+        <ul>
+            <li>Firebase configuration</li>
+        </ul>
+    </div>
 
 </body>
 </html>
