--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -28,6 +28,13 @@
             <li>Firebase configuration</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Sign in with google, open google login popup
+        </h2>
+        <ul>
+            <li>Sign in with google</li>
+        </ul>
+    </div>
 
 </body>
 </html>
