--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -35,6 +35,13 @@
             <li>Sign in with google</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Recap google popup sign in process
+        </h2>
+        <ul>
+            <li>Recap google popup sign in process</li>
+        </ul>
+    </div>
 
 </body>
 </html>
