--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -42,6 +42,13 @@
             <li>Recap google popup sign in process</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Set logged in user in state, display logged in user info
+        </h2>
+        <ul>
+            <li>Display user info</li>
+        </ul>
+    </div>
 
 </body>
 </html>
