m56 v7: Github login System

--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -49,6 +49,13 @@
             <li>Display user info</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Implement github login system and display user infO
+        </h2>
+        <ul>
+            <li>Github login System</li>
+        </ul>
+    </div>
 
 </body>
 </html>
