m56 v8: Sign out button

--- a/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
+++ b/Milestone_10 - React Authentication/Module_56 - Firebase Authentication/01_About Module 56.html
@@ -56,6 +56,13 @@
             <li>Github login System</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Add Sign out button and toggle sign in, sign out button
+        </h2>
+        <ul>
+            <li>Sign out button</li>
+        </ul>
+    </div>
 
 </body>
 </html>
