--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -14,6 +14,13 @@
             <li>Recap google sign in</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Login, Registration, Sign Up, Sign In, Create Simple Login Form
+        </h2>
+        <ul>
+            <li>Create Simple Login Form</li>
+        </ul>
+    </div>
 
 </body>
 </html>
