m57 v4: Create New User

--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -21,6 +21,20 @@
             <li>Create Simple Login Form</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Use Bootstrap From And Get User Email And Password
+        </h2>
+        <ul>
+            <li>Create Simple Login Form</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>4.Create New User Using Email And Password
+        </h2>
+        <ul>
+            <li>Create New User</li>
+        </ul>
+    </div>
 
 </body>
 </html>
