m57 v5: Login Form Field Validation

--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -35,6 +35,13 @@
             <li>Create New User</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Login Form Field Validation Using Regular Expression, Show Error
+        </h2>
+        <ul>
+            <li>Login Form Field Validation</li>
+        </ul>
+    </div>
 
 </body>
 </html>
