--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -42,6 +42,13 @@
             <li>Login Form Field Validation</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Toggle Registration and login, implement sign in with email password
+        </h2>
+        <ul>
+            <li>Implement sign in with email password</li>
+        </ul>
+    </div>
 
 </body>
 </html>
