m57 v7: Handle Email Verification, Reset Password

--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -49,6 +49,13 @@
             <li>Implement sign in with email password</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Handle Email Verification, Forget Password Or Reset Password
+        </h2>
+        <ul>
+            <li>Handle Email Verification, Reset Password</li>
+        </ul>
+    </div>
 
 </body>
 </html>
