--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -56,6 +56,13 @@
             <li>Handle Email Verification, Reset Password</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Update User Name And Other Information To Firebase
+        </h2>
+        <ul>
+            <li>Update User Name And Other Information</li>
+        </ul>
+    </div>
 
 </body>
 </html>
