--- a/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
+++ b/Milestone_10 - React Authentication/Module_57 - Email Authentication/01_About Module 57.html
@@ -63,6 +63,12 @@
             <li>Update User Name And Other Information</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary</h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
