--- a/Milestone_10 - React Authentication/Module_57.5 - Firebase Practice/01_About Module 57.5.html
+++ b/Milestone_10 - React Authentication/Module_57.5 - Firebase Practice/01_About Module 57.5.html
@@ -14,6 +14,13 @@
             <li>Facebook Authentication</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Practice Simple Firebase Authentication
+        </h2>
+        <ul>
+            <li>Facebook Authentication</li>
+        </ul>
+    </div>
 
 </body>
 </html>
