--- a/Milestone_10 - React Authentication/Module_57.5 - Firebase Practice/01_About Module 57.5.html
+++ b/Milestone_10 - React Authentication/Module_57.5 - Firebase Practice/01_About Module 57.5.html
@@ -18,7 +18,7 @@
         <h2>2.Practice Simple Firebase Authentication
         </h2>
         <ul>
-            <li>Facebook Authentication</li>
+            <li>About Practices</li>
         </ul>
     </div>
 
