m58 v3: Custom hook with on State Change and config change

--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -21,6 +21,13 @@
             <li>Create Use Firebase hook</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Add Google Sign using custom hook with on State Change
+        </h2>
+        <ul>
+            <li>Custom hook with on State Change</li>
+        </ul>
+    </div>
 
 </body>
 </html>
