--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -22,10 +22,10 @@
         </ul>
     </div>
     <div class="video">
-        <h2>3.Add Google Sign using custom hook with on State Change
+        <h2>4.Implement Sign out and display user logged in User name
         </h2>
         <ul>
-            <li>Custom hook with on State Change</li>
+            <li>Sign out and github implement</li>
         </ul>
     </div>
 
