--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -11,7 +11,7 @@
         <h2>1.Module Introduction and Basic Project Setup
         </h2>
         <ul>
-            <li>Basic Project Setup</li>
+            <li>Project Setup</li>
         </ul>
     </div>
 
