--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -14,6 +14,13 @@
             <li>Project Setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create Use Firebase hook to for shared authentication
+        </h2>
+        <ul>
+            <li>Create Use Firebase hook</li>
+        </ul>
+    </div>
 
 </body>
 </html>
