m58 v4: Implement Sign out and github

--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -28,6 +28,13 @@
             <li>Add Google Sign</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Implement Sign out and display user logged in User name
+        </h2>
+        <ul>
+            <li>Implement Sign out and github</li>
+        </ul>
+    </div>
 
 </body>
 </html>
