--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -35,6 +35,13 @@
             <li>Implement Sign out and github</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Create Simple Auth Context and Auth Provider with value
+        </h2>
+        <ul>
+            <li>Create Simple Auth Context</li>
+        </ul>
+    </div>
 
 </body>
 </html>
