--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -42,6 +42,13 @@
             <li>Create Simple Auth Context</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Setup useAuth custom hook and create shipping route
+        </h2>
+        <ul>
+            <li>Setup useAuth, Create shipping</li>
+        </ul>
+    </div>
 
 </body>
 </html>
