m58 v7: Redirect and Private Route

--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -49,6 +49,13 @@
             <li>Setup useAuth, Create shipping</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Introduction to Route, Redirect and Private Route
+        </h2>
+        <ul>
+            <li>Redirect and Private Route</li>
+        </ul>
+    </div>
 
 </body>
 </html>
