--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -56,6 +56,20 @@
             <li>Redirect and Private Route</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Introduction to Route, Redirect and Private Route
+        </h2>
+        <ul>
+            <li>Redirect and Private Route</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>8.Understanding Private Route, Implement Auth Redirect
+        </h2>
+        <ul>
+            <li>Understanding Private Route</li>
+        </ul>
+    </div>
 
 </body>
 </html>
