--- a/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_58 - Auth Intergration and private route/01_About Module 58.html
@@ -70,6 +70,13 @@
             <li>Understanding Private Route</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary and Private Route Recap
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
