m59 v3: Setup firebase sign in, sign out

--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 59.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 59.html
@@ -21,6 +21,13 @@
             <li>Create login, register</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Setup firebase sign in, sign out and observer hook
+        </h2>
+        <ul>
+            <li>Setup firebase sign in, sign out</li>
+        </ul>
+    </div>
 
 </body>
 </html>
