--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -14,6 +14,13 @@
             <li>Project Setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create login, register component and set route
+        </h2>
+        <ul>
+            <li>Create login, register component</li>
+        </ul>
+    </div>
 
 </body>
 </html>
