m59 v4: Create user context

--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -28,6 +28,13 @@
             <li>Setup firebase</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Create user context and set logged in user in context
+        </h2>
+        <ul>
+            <li>Create user context</li>
+        </ul>
+    </div>
 
 </body>
 </html>
