--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -35,6 +35,13 @@
             <li>Create user context</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Use Auth Context hook and recap code
+        </h2>
+        <ul>
+            <li>Use Auth Context</li>
+        </ul>
+    </div>
 
 </body>
 </html>
