--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -42,6 +42,13 @@
             <li>Use Auth Context</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Create Private Route and understanding destructuring
+        </h2>
+        <ul>
+            <li>Create Private Route</li>
+        </ul>
+    </div>
 
 </body>
 </html>
