--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -49,6 +49,13 @@
             <li>Create Private Route</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Set Private Route and Redirect to login url
+        </h2>
+        <ul>
+            <li>Set Private Route and Redirect</li>
+        </ul>
+    </div>
 
 </body>
 </html>
