m59 v8: Redirect to the Shop page

--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -56,6 +56,13 @@
             <li>Set Private Route and Redirect</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.(optional) Redirect to the initial page after login
+        </h2>
+        <ul>
+            <li>Redirect to the Shop page</li>
+        </ul>
+    </div>
 
 </body>
 </html>
