m59 v9: Create shipment form

--- a/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
+++ b/Milestone_10 - React Authentication/Module_59 - Private Route Ema-jhon/01_About Module 58.html
@@ -63,6 +63,13 @@
             <li>Redirect to the Shop page</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Create shipment form using React hook form
+        </h2>
+        <ul>
+            <li>Create shipment form</li>
+        </ul>
+    </div>
 
 </body>
 </html>
