--- a/Milestone_10 - React Authentication/Module_59.5 - Firebase auth and react router recap/01_About Module 59.5.html
+++ b/Milestone_10 - React Authentication/Module_59.5 - Firebase auth and react router recap/01_About Module 59.5.html
@@ -14,6 +14,13 @@
             <li>Host Firebase</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Practice Firebase Auth And Private Route Using Burj Al Arab
+        </h2>
+        <ul>
+            <li>Practice Burj Al Arab</li>
+        </ul>
+    </div>
 
 </body>
 </html>
