m61 v2: How React and JSX works

--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -14,6 +14,13 @@
             <li>React Review</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Recap of How React and JSX works
+        </h2>
+        <ul>
+            <li>How React and JSX works</li>
+        </ul>
+    </div>
 
 </body>
 </html>
