m59 v3: About folder structure

--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -21,6 +21,20 @@
             <li>How React and JSX works</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Recap of How React and JSX works
+        </h2>
+        <ul>
+            <li>How React and JSX works</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>3.Best folder structure and component orientation
+        </h2>
+        <ul>
+            <li>About folder structure</li>
+        </ul>
+    </div>
 
 </body>
 </html>
