--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -35,6 +35,13 @@
             <li>About folder structure</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Collect, Edit, optimize and host images for your website
+        </h2>
+        <ul>
+            <li>Image collect and hosting in ImgDB</li>
+        </ul>
+    </div>
 
 </body>
 </html>
