m60 v5: Create service component and display services

--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -42,6 +42,13 @@
             <li>Image collect and hosting in ImgDB</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Create service component and display services
+        </h2>
+        <ul>
+            <li>Create service component and display services</li>
+        </ul>
+    </div>
 
 </body>
 </html>
