m60 v6: Make Services Responsive

--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -49,6 +49,13 @@
             <li>Create service component and display services</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>6.Make Services Responsive using CSS media query
+        </h2>
+        <ul>
+            <li>Make Services Responsive</li>
+        </ul>
+    </div>
 
 </body>
 </html>
