m60 v7: Make Responsive Expert

--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -56,6 +56,13 @@
             <li>Make Services Responsive</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.Build Responsive React website using Bootstrap
+        </h2>
+        <ul>
+            <li>Make Responsive Expert</li>
+        </ul>
+    </div>
 
 </body>
 </html>
