--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -63,6 +63,13 @@
             <li>Make Responsive Expert</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.React Bootstrap for responsive and image slider, banner
+        </h2>
+        <ul>
+            <li>Make Responsive banner</li>
+        </ul>
+    </div>
 
 </body>
 </html>
