--- a/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
+++ b/Milestone_10 - React Authentication/Module_60 - Responsive React Website/01_About Module 60.html
@@ -70,6 +70,13 @@
             <li>Make Responsive banner</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module Summary, Tailwind and Material UI
+        </h2>
+        <ul>
+            <li>Module Summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
