--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -14,6 +14,13 @@
             <li>Basic Router setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Setup Dynamic Route and access route params
+        </h2>
+        <ul>
+            <li>Setup Dynamic Route</li>
+        </ul>
+    </div>
 
 </body>
 </html>
