--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -21,6 +21,13 @@
             <li>Setup Dynamic Route</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.Header and Login component with React Bootstrap Navbar
+        </h2>
+        <ul>
+            <li>Header and Login component</li>
+        </ul>
+    </div>
 
 </body>
 </html>
