m61 v4: Make Header and create Firebase

--- a/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
+++ b/Milestone_10 - React Authentication/Module_61 - React Router and Firebase Recap/01_About Module 61.html
@@ -28,6 +28,13 @@
             <li>Header and Login component</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>4.Make Header Responsive and create Firebase Project
+        </h2>
+        <ul>
+            <li>Make Header and create Firebase</li>
+        </ul>
+    </div>
 
 </body>
 </html>
